--- a/waimai/DetailRest.xaml
+++ b/waimai/DetailRest.xaml
@@ -24,8 +24,8 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <!--I will go on tomorrow-->
-                            <Grid Background="#E3E3E3" Name="{Binding Path=itemName}">
-                                <TextBlock FontSize="18" Text="{Binding Path=itemName}" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                            <Grid Background="#E3E3E3" Width="120" >
+                                <TextBlock TextAlignment="Center" HorizontalAlignment="Center" FontSize="28" TextWrapping="Wrap" Text="{Binding Path=itemName}"  VerticalAlignment="Center"></TextBlock>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
@@ -36,10 +36,10 @@
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
                     <StackPanel Name="topDescription" Orientation="Horizontal">
-                        <TextBlock FontSize="18" FontWeight="Bold" Text="{Binding Path=itemName}"></TextBlock>
-                        <TextBlock FontSize="15" Text="{Binding Path=itemDescription}" TextWrapping="Wrap" Margin="10,0,0,0"></TextBlock>
+                        <TextBlock Name="tbItemName" FontSize="18" FontWeight="Bold" Text=""></TextBlock>
+                        <TextBlock Name="tbItemDecription" FontSize="15" Text="" TextWrapping="Wrap" Margin="10,0,0,0"></TextBlock>
                     </StackPanel>
-                    <ListView Name="foodList">
+                    <ListView Name="foodList" Grid.Row="1">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <Grid>
@@ -54,8 +54,9 @@
                                         <ColumnDefinition></ColumnDefinition>
                                         <ColumnDefinition></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
-                                    <Image Width="40" Grid.RowSpan="5" Source="{Binding Path=foodImage}"></Image>
-                                    <TextBlock Grid.Column="1" FontSize="22" FontWeight="Black" Foreground="Black" TextWrapping="Wrap" Text="{Binding Path=foodName}"></TextBlock>
+                                    <Line Grid.ColumnSpan="2" Stroke="Gray" StrokeThickness="1" X1="0" Y1="0" X2="400" Y2="0"></Line>
+                                    <Image Width="60" Grid.RowSpan="5" Source="{Binding Path=foodImage}" Margin="0,-20,0,0"></Image>
+                                    <TextBlock Grid.Column="1" FontSize="22" FontWeight="Black" Foreground="Black" TextWrapping="Wrap" Text="{Binding Path=foodName}" Margin="0,10,0,0"></TextBlock>
                                     <TextBlock Grid.Row="1" Grid.Column="1" FontSize="15"  Foreground="#F7F7F7" TextWrapping="Wrap" Text="{Binding Path=foodDescription}"></TextBlock>
                                     <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
                                         <TextBlock Foreground="Red" FontSize="18" Text="{Binding Path=foodAttributes1}"></TextBlock>
@@ -83,7 +84,7 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Image  Height="40" Source="/Assets/yyb_icon_back.png" Margin="25,0,0,0" HorizontalAlignment="Left" Tapped="Image_Tapped"></Image>
-                <TextBlock Grid.Column="1" Name="restNameTb" FontSize="30" Foreground="White" Text="味栈" Margin="-30,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                <TextBlock Grid.Column="1" Name="restNameTb" FontSize="30" Foreground="White" Text="味栈" Margin="-25,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
             </Grid>
             <Grid Grid.Row="1" Background="#F7F7F7">
                 <Grid.ColumnDefinitions>
