--- a/waimai/DetailRest.xaml
+++ b/waimai/DetailRest.xaml
@@ -24,9 +24,11 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <!--I will go on tomorrow-->
-                            <Grid Background="#E3E3E3" Width="120" >
+                            <Border BorderBrush="Pink" BorderThickness="1">
+                            <Grid Background="#E3E3E3" Width="120" Tapped="Grid_Tapped">
                                 <TextBlock TextAlignment="Center" HorizontalAlignment="Center" FontSize="28" TextWrapping="Wrap" Text="{Binding Path=itemName}"  VerticalAlignment="Center"></TextBlock>
                             </Grid>
+                            </Border>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
@@ -55,19 +57,19 @@
                                         <ColumnDefinition></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
                                     <Line Grid.ColumnSpan="2" Stroke="Gray" StrokeThickness="1" X1="0" Y1="0" X2="400" Y2="0"></Line>
-                                    <Image Width="60" Grid.RowSpan="5" Source="{Binding Path=foodImage}" Margin="0,-20,0,0"></Image>
-                                    <TextBlock Grid.Column="1" FontSize="22" FontWeight="Black" Foreground="Black" TextWrapping="Wrap" Text="{Binding Path=foodName}" Margin="0,10,0,0"></TextBlock>
+                                    <Image Width="50" Grid.RowSpan="5" Source="{Binding Path=foodImage}" Margin="-30,-50,0,0"></Image>
+                                    <TextBlock Grid.Column="1" FontSize="22" FontWeight="Black" Foreground="Black" TextWrapping="Wrap" Text="{Binding Path=foodName}" Margin="-10,10,0,0"></TextBlock>
                                     <TextBlock Grid.Row="1" Grid.Column="1" FontSize="15"  Foreground="#F7F7F7" TextWrapping="Wrap" Text="{Binding Path=foodDescription}"></TextBlock>
-                                    <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
+                                    <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="-10,-10,0,0">
                                         <TextBlock Foreground="Red" FontSize="18" Text="{Binding Path=foodAttributes1}"></TextBlock>
                                         <TextBlock Foreground="Green" FontSize="18" Text="{Binding Path=foodAttributes2}"></TextBlock>
                                     </StackPanel>
-                                    <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
-                                        <TextBlock FontSize="15" Foreground="Orange" Text="{Binding Path=rateStar}"></TextBlock>
-                                        <TextBlock FontSize="18" Foreground="Black" Text="{Binding Path=Evaluate}" Margin="10,0,10,0"></TextBlock>
-                                        <TextBlock FontSize="18" Foreground="Black" Text="{Binding Path=monthSale}"></TextBlock>
+                                    <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="-50,0,0,0">
+                                        <TextBlock FontSize="13" Foreground="Orange" Text="{Binding Path=rateStar}"></TextBlock>
+                                        <TextBlock FontSize="15" Foreground="Black" Text="{Binding Path=Evaluate}" Margin="10,0,10,0"></TextBlock>
+                                        <TextBlock FontSize="15" Foreground="Black" Text="{Binding Path=monthSale}"></TextBlock>
                                     </StackPanel>
-                                    <StackPanel Grid.Row="4" Grid.Column="1" VerticalAlignment="Center">
+                                    <StackPanel Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Margin="-10,0,0,0">
                                     <TextBlock  FontSize="25" Foreground="#FF7F00" Text="{Binding Path=foodPrice}"></TextBlock>
                                         <TextBlock FontSize="20" Foreground="Pink" FontWeight="Black" Text="{Binding Path=foodLimitation}"></TextBlock>
                                     </StackPanel>
